[package]
name = "two_way_map"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = { version = "1.22.0", features = ["derive"] }

[lints.rust]
warnings = "forbid"
unsafe-code = "forbid"

[lints.clippy]
all = "deny"

[features]
test-basic = []
test-insert = []
test-removal = []
test-retain = []
test-iteration = []
test-range-queries = []
test-from-iterator = []
test-into-iterator = []
test-traits = []
test-no-extra-deps = []
test-borrow-trait = []
